build_logs/smoke_iced_image_build_v5.log
   Compiling iced_wgpu v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\wgpu)
   Compiling netrender v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender)
   Compiling netrender_text v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender_text)
error[E0614]: type `BufferViewMut` cannot be dereferenced
   --> vendor\iced\wgpu\src\image\atlas.rs:343:40
    |
343 |         let fragment: &mut [u8] = &mut *fragment_view;
    |                                        ^^^^^^^^^^^^^^ can't be dereferenced

   Compiling middlenet-netrender-bridge v0.0.1 (C:\Users\mark_\Code\repos\graphshell\crates\middlenet-netrender-bridge)
For more information about this error, try `rustc --explain E0614`.
error: could not compile `iced_wgpu` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
